--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/session": "^1.0.25",
     "@adonisjs/shield": "^1.0.6",
     "@adonisjs/websocket": "^1.0.10",
+    "npm": "^6.4.0",
     "pg": "^7.4.3"
   },
   "devDependencies": {},
